Update and add Documentation

--- a/section2/Map-comparison.ipynb
+++ b/section2/Map-comparison.ipynb
@@ -20,22 +20,47 @@
    "source": [
     "import up42\n",
     "\n",
-    "file\n",
-    "up42.authenticate(project_api_key=token)\n",
-    "project=up42.initialize_project()\n",
+    "def run_deforestation_monitor():\n",
+    "    \"\"\"\n",
+    "    Runs a deforestation monitoring workflow using UP42 API.\n",
     "\n",
-    "workflow = project.create_workflow(name=\"Deforestation\", use_existing=True)\n",
-    "input_tasks=['oneatlas-pleiades-aoiclipped','deforestation']\n",
-    "workflow.add_workflow_tasks(input_tasks=input_tasks)\n",
-    "parameter = workflow.construct_parameters(\n",
-    "    geometry=[13.41686, 52.51167, 13.422503, 52.514706],\n",
-    "    geometry_operation=\"intersects\",\n",
-    "    start_date=\"2020-01-01\",\n",
-    "    end_date=\"2020-10-14\",\n",
-    "    limit=2)\n",
+    "    This function authenticates the user with the provided project API key,\n",
+    "    initializes the project, creates a workflow, adds input tasks to the workflow,\n",
+    "    constructs the workflow parameters, runs the job, and downloads the results.\n",
     "\n",
-    "job = workflow.run_job(input_parameters=parameter, track_status=True)\n",
-    "job.download_results()"
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Authenticate with the project API key\n",
+    "    up42.authenticate(project_api_key=token)\n",
+    "\n",
+    "    # Initialize the project\n",
+    "    project = up42.initialize_project()\n",
+    "\n",
+    "    # Create a workflow\n",
+    "    workflow = project.create_workflow(name=\"Deforestation\", use_existing=True)\n",
+    "\n",
+    "    # Add input tasks to the workflow\n",
+    "    input_tasks = ['oneatlas-pleiades-aoiclipped', 'deforestation']\n",
+    "    workflow.add_workflow_tasks(input_tasks=input_tasks)\n",
+    "\n",
+    "    # Construct the workflow parameters\n",
+    "    parameter = workflow.construct_parameters(\n",
+    "        geometry=[13.41686, 52.51167, 13.422503, 52.514706],\n",
+    "        geometry_operation=\"intersects\",\n",
+    "        start_date=\"2020-01-01\",\n",
+    "        end_date=\"2020-10-14\",\n",
+    "        limit=2\n",
+    "    )\n",
+    "\n",
+    "    # Run the job and track its status\n",
+    "    job = workflow.run_job(input_parameters=parameter, track_status=True)\n",
+    "\n",
+    "    # Download the job results\n",
+    "    job.download_results()\n",
+    "\n",
+    "run_deforestation_monitor()\n"
    ]
   },
   {
@@ -79,22 +104,29 @@
     }
    ],
    "source": [
+    "# Set your email and password\n",
     "youremail='janis.graf@st.oth-regensburg.de'\n",
     "yourpassword='QrD$tMd9>!}TyqF'\n",
     "\n",
+    "# Authenticate with UP42 using your email and password\n",
     "up42.authenticate(\n",
     "    username= \"janis.graf@st.oth-regensburg.de\",\n",
     "    password= \"QrD$tMd9>!}TyqF\",\n",
     ")\n",
     "\n",
+    "# Get the credits balance for your account\n",
     "up42.get_credits_balance()\n",
     "\n",
+    "# Get an example area of interest (AOI) in Washington as a dataframe\n",
     "up42.get_example_aoi(\n",
     "    location=\"Washington\",\n",
     "    as_dataframe=True,\n",
     ")\n",
+    "\n",
+    "# Initialize the storage\n",
     "storage = up42.initialize_storage()\n",
     "\n",
+    "# Get orders from the storage\n",
     "storage.get_orders(\n",
     "    workspace_orders=False,\n",
     "    return_json=True,\n",
@@ -107,11 +139,13 @@
     "    tags=[\"optical\",\"us\"],\n",
     ")\n",
     "\n",
+    "# Get another example area of interest (AOI) in Washington as a dataframe\n",
     "up42.get_example_aoi(\n",
     "    location=\"Washington\",\n",
     "    as_dataframe=True,\n",
     ")\n",
     "\n",
+    "# Read a vector file (geojson) as a dataframe\n",
     "up42.read_vector_file(\n",
     "    filename=\"data/central_park.geojson\",\n",
     "    as_dataframe=True,\n",
